--- a/mintool/static/mintool/mintool.css
+++ b/mintool/static/mintool/mintool.css
@@ -1,12 +1,21 @@
 #header{
     width:100%;
     height: 100px;
-    background-color: aliceblue;
+    border: 1px solid black;
+    background-color: gainsboro;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 100px;
+    font-size: 50px;
+    font-family: "Helvetica Neue";
 }
 #nav-bar{
     width: 100%;
     height: 33px;
-    background-color: azure;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    background-color: white;
 }
 #seperator {
     width: 100%;
@@ -16,23 +25,47 @@
     text-align: justify;
     text-justify: inter-word;
 }
+p {
+    text-align: justify;
+    text-justify: inter-word;
+}
 #sub_header{
     font-weight: 800;
     font-size: 18px;
+    margin-bottom: 36px;
 }
-.isoform_display {
-    display: inline-block;
+
+#gene_name {
+    font-style: italic;
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+
+.terminus {
+    width: 50%;
+    margin: 0 auto;
+    border: 1px solid black;
+    height:25px;
+    text-align: center;
     vertical-align: middle;
-    transform: translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    backface-visibility: hidden;
-    -moz-osx-font-smoothing: grayscale;
-    transition-duration: 0.3s;
-    transition-property: transform;
+    line-height: 25px;
+    background: white;
+}
+
+.terminus:hover,
+.terminus:focus,
+.terminus:active {
+    background: gainsboro;
+}
+
+#spacer12{
+    width: 100%;
+    height: 12px;
 }
 
 .isoform_display :hover,
 .isoform_display :focus,
 .isoform_display :active {
-    transform: scale(1.1);
+    background-color: gainsboro;
 }
