--- a/mintool/static/mintool/mintool.css
+++ b/mintool/static/mintool/mintool.css
@@ -52,6 +52,12 @@ p {
     line-height: 25px;
     background: white;
 }
+#selected{
+    background: LightSlateGray;
+}
+#selected:hover{
+    background: LightSlateGray;
+}
 
 .terminus:hover,
 .terminus:focus,
@@ -64,12 +70,38 @@ p {
     height: 12px;
 }
 #gRNA-display{
-    word-wrap:break-word;
-    display:inline-block;
-    border: 1px solid black;
+    /*word-wrap:break-word;*/
+    /*display:inline-block;*/
+    /*border: 1px solid black;*/
 }
+.gRNA {
+    margin-bottom: 12px;
+    width: 100%;
+}
+
+
+#gRNA-desc{
+    width: 100%;
+    font-size: 10px;
+    letter-spacing: 1px;
+}
+.gRNA_seq{
+    width: 100%;
+    font-family: "Courier New";
+    font-weight: 400;
+    font-size: 10pt;
+}
+
+
+
+/*#gRNA_container :hover,
+#gRNA_container :focus,
+#gRNA_container :active {
+    background-color: gainsboro;
+}*/
+/*
 .isoform_display :hover,
 .isoform_display :focus,
 .isoform_display :active {
     background-color: gainsboro;
-}
+}*/
