--- a/mintool/static/mintool/mintool.css
+++ b/mintool/static/mintool/mintool.css
@@ -29,7 +29,24 @@ p {
     text-align: justify;
     text-justify: inter-word;
 }
-#sub_header{
+#sub_header_1{
+    font-weight: 800;
+    font-size: 18px;
+    margin-bottom: 36px;
+}
+
+#sub_header_2{
+    font-weight: 800;
+    font-size: 18px;
+    margin-bottom: 36px;
+}
+
+#sub_header_3{
+    font-weight: 800;
+    font-size: 18px;
+    margin-bottom: 36px;
+}
+#section_4{
     font-weight: 800;
     font-size: 18px;
     margin-bottom: 36px;
@@ -92,6 +109,33 @@ p {
     font-size: 10pt;
 }
 
+.download_button {
+    background: #859dad;
+  background-image: -webkit-linear-gradient(top, #859dad, #4d6473);
+  background-image: -moz-linear-gradient(top, #859dad, #4d6473);
+  background-image: -ms-linear-gradient(top, #859dad, #4d6473);
+  background-image: -o-linear-gradient(top, #859dad, #4d6473);
+  background-image: linear-gradient(to bottom, #859dad, #4d6473);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Courier New;
+    width:100%;
+  color: #ffffff;
+  font-size: 24px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.download_button:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
 
 
 /*#gRNA_container :hover,
