--- a/mintool/static/mintool/mintool.css
+++ b/mintool/static/mintool/mintool.css
@@ -247,7 +247,7 @@ p {
     width: 120px;
     border-radius: 3px;
     overflow: hidden;
-    background: #fafafa url("img/icon-select.png") no-repeat 90% 50%;
+    background: #fafafa no-repeat 90% 50%;
 }
 
 #id_organism select {
