really last commit

--- a/mintool/templates/mintool/index.html
+++ b/mintool/templates/mintool/index.html
@@ -20,7 +20,7 @@
     <div class="clear"></div>
     <div class="grid_4" style="width: 300px;height: 10px;"> </div>
     <div class="grid_4">
-        <form action="/mintool/" method="post" class="form-container">
+        <form action="" method="post" class="form-container">
             <div class="form-title"><h2>Target Gene Search</h2></div>
             {% csrf_token %}
             <div class="form-title">Gene Name{{ form.gene_name}}</div>
